force-app/main/default/objects/WellSpring_Configurations__mdt/WellSpring_Configurations__mdt.object-meta.xml
<CustomObject>
    <label>WellSky Configurations</label>
    <pluralLabel>WellSky Configurations</pluralLabel>
</CustomObject>