force-app/main/default/objects/WellSpring_Configurations__mdt/fields/Business_Stage_Value__c.field-meta.xml
<CustomField>
    <fullName>Business_Stage_Value__c</fullName>
    <label>Business Stage Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>