force-app/main/default/objects/WellSpring_Configurations__mdt/fields/Data_Transfer_Fields__c.field-meta.xml
<CustomField>
    <fullName>Data_Transfer_Fields__c</fullName>
    <label>Data Transfer Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>