force-app/main/default/objects/WellSpring_Configurations__mdt/fields/Dormant_After_Days__c.field-meta.xml
<CustomField>
    <fullName>Dormant_After_Days__c</fullName>
    <label>Dormant After Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>