force-app/main/default/objects/WellSpring_Configurations__mdt/fields/Dummy_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Account_Name__c</fullName>
    <label>Dummy Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>