force-app/main/default/objects/WellSpring_Configurations__mdt/fields/Is_Active_Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_Referral_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active Referral Source</label>
    <type>Checkbox</type>
</CustomField>