force-app/main/default/objects/WellSpring_Configurations__mdt/fields/Is_Dormant_Stage__c.field-meta.xml
<CustomField>
    <fullName>Is_Dormant_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Dormant Stage</label>
    <type>Checkbox</type>
</CustomField>