force-app/main/default/objects/WellSpring_Configurations__mdt/fields/Mileage_Rate__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Rate__c</fullName>
    <label>Mileage Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>