force-app/main/default/objects/WellSpring_Configurations__mdt/fields/Requires_Future_Event_Check__c.field-meta.xml
<CustomField>
    <fullName>Requires_Future_Event_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Future Event Check</label>
    <type>Checkbox</type>
</CustomField>